--- a/doc/slide/slide.tex
+++ b/doc/slide/slide.tex
@@ -26,20 +26,20 @@ $10$           finalists
 \begin{scriptsize}
 \begin{tabular}{|lc|l|}
 \hline
-Name          & Specification           & AEAD & Hash & Component(s)                        
+Name              & Specification           & AEAD & Hash & Component(s)                        
 \hline
-Grain128-AEAD & \cite{NIST:LW:grain}    & X    &      &             Stream cipher => L/NFSRs
+Grain128-AEAD     & \cite{NIST:LW:grain}    & X    &      &             Stream cipher => L/NFSRs                                                         \\
 \hline
-GIFT-COFB     & \cite{NIST:LW:gift}     & X    &      &             Block  cipher => GIFT-128
-Romulus       & \cite{NIST:LW:romulus}  & X    & X    & (Tweakable) Block  cipher => Skinny-128-384+
+GIFT-COFB         & \cite{NIST:LW:gift}     & X    &      &             Block  cipher => GIFT-128                                                        \\
+Romulus           & \cite{NIST:LW:romulus}  & X    & X    & (Tweakable) Block  cipher => Skinny-128-384+                                                 \\
 \hline
-Ascon         & \cite{NIST:LW:ascon}    & X    & X    &             Permutation
-Elephant      & \cite{NIST:LW:elephant} & X    &      &             Permutation   => Spongent-$\pi[n]$ or Keccak-$f[m]$
-Photon-Beetle & \cite{NIST:LW:photon}   & X    & X    &             Permutation   => ${\tt PHOTON}_{256}$
-Sparkle       & \cite{NIST:LW:sparkle}  & X    & X    &             Permutation   => {\sc Sparkle}                      (involving {\sf Alzette} ARX-box) \\
-Xoodyak       & \cite{NIST:LW:xoodyak}  & X    & X    &             Permutation   => {\sc Xoodoo}
-ISAP          & \cite{NIST:LW:isap}     & X    &      &             Permutation                                                                                      \\
-TinyJambu     & \cite{NIST:LW:jambu}    & X    &      & (Keyed)     Permutation   => $P_n$                              (involving LFSR)                  \\
+Ascon             & \cite{NIST:LW:ascon}    & X    & X    &             Permutation   => Ascon-$p$                                                       \\
+Elephant          & \cite{NIST:LW:elephant} & X    &      &             Permutation   => Spongent-$\pi[n]$ or Keccak-$f[m]$                              \\
+PHOTON-Beetle     & \cite{NIST:LW:photon}   & X    & X    &             Permutation   => ${\tt PHOTON}_{256}$                                            \\
+Schwaemm and Esch & \cite{NIST:LW:sparkle}  & X    & X    &             Permutation   => Sparkle                             (involving Alzette ARX-box) \\
+Xoodyak           & \cite{NIST:LW:xoodyak}  & X    & X    &             Permutation   => Xoodoo                                                          \\
+ISAP              & \cite{NIST:LW:isap}     & X    &      &             Permutation   => Ascon-$p$         or  Keccak-$f[m]$                             \\
+TinyJambu         & \cite{NIST:LW:jambu}    & X    &      & (Keyed)     Permutation   => $P_n$                               (involving LFSR)            \\
 \hline
 \end{tabular}
 \end{scriptsize}
@@ -49,15 +49,22 @@ TinyJambu     & \cite{NIST:LW:jambu}    & X    &      & (Keyed)     Permutation 
 
 % -----------------------------------------------------------------------------
 
+% strategy
+% - for each candidate
+%   - analysis, then on-paper ISE design
+%   - software implementation using stock tool-chain plus .insn
+%   - simulate using (patched) Spike
+%   - hardware implementation using Rocket
+
 % scope
 % - RV32 and RV64, but focus on the former initially
 % - broad and shallow analysis of AEAD only
-% - ignore ISAP (since this uses Ascon-$p$ or Keccak-$f[m]$ permutation
+% - ignore ISAP (since this uses Ascon-$p$ or Keccak-$f[m]$ permutation)
+% - ``partial'' component (e.g., only encryption) where possible
 
 % design criteria
 % - strictly $3$-address (i.e., $2$-input, $1$ output) instructions
-% design consideration
-% - ``partial'' component (e.g., only encryption, or only forward permutation)
+% - minimise additional state (e.g., CSRs)
 
 % special-purpose
 % - there are some cases where an interface change helps a lot (e.g., Photon initialises a state matrix row-wise but the natural representation/implementation is column-wise)
