--- a/doc/slide/slide.bib
+++ b/doc/slide/slide.bib
@@ -6,7 +6,14 @@
 
 % =============================================================================
 
-@misc{NIST:LW:ascon,
+@misc{NIST:LWC:call,
+  author        = {National Institute of Standards and Technology (NIST)},
+  title         = {Submission Requirements and Evaluation Criteria for the Lightweight Cryptography Standardization Process},
+  year          = {2018},
+  note          = {\url{https://csrc.nist.gov/CSRC/media/Projects/Lightweight-Cryptography/documents/final-lwc-submission-requirements-august2018.pdf}}
+}
+
+@misc{NIST:LWC:ascon,
   author        = {C. Dobraunig and M. Eichlseder and F. Mendel and M. Schl\"{a}ffer},
   title         = {Ascon},
   howpublished  = {Submission to NIST (version $1.2$)},
@@ -14,7 +21,7 @@
   note          = {\url{https://csrc.nist.gov/CSRC/media/Projects/lightweight-cryptography/documents/finalist-round/updated-spec-doc/ascon-spec-final.pdf}}
 }
 
-@misc{NIST:LW:elephant,
+@misc{NIST:LWC:elephant,
   author        = {T. Beyne and Y.L. Chen and C. Dobraunig and B. Mennink},
   title         = {Elephant},
   howpublished  = {Submission to NIST (version $2.0$)},
@@ -22,7 +29,7 @@
   note          = {\url{https://csrc.nist.gov/CSRC/media/Projects/lightweight-cryptography/documents/finalist-round/updated-spec-doc/elephant-spec-final.pdf}}
 }
 
-@misc{NIST:LW:gift,
+@misc{NIST:LWC:gift,
   author        = {S. Banik and A. Chakraborti and T. Iwata and K. Minematsu and M. Nandi and T. Peyrin and Y. Sasaki and S.M. Sim and Y. Todo},
   title         = {{\sf GIFT-COFB}},
   howpublished  = {Submission to NIST (version $1.1$)},
@@ -30,7 +37,7 @@
   note          = {\url{https://csrc.nist.gov/CSRC/media/Projects/lightweight-cryptography/documents/finalist-round/updated-spec-doc/gift-cofb-spec-final.pdf}}
 }
 
-@misc{NIST:LW:grain,
+@misc{NIST:LWC:grain,
   author        = {M. Hell and T. Johansson and A. Maximov and W. Meier and J. S\"{o}nnerup and H. Yoshida},
   title         = {{\tt Grain-128AEADv2}},
   howpublished  = {Submission to NIST (version $2.0$)},
@@ -38,7 +45,7 @@
   note          = {\url{https://csrc.nist.gov/CSRC/media/Projects/lightweight-cryptography/documents/finalist-round/updated-spec-doc/grain-128aead-spec-final.pdf}}
 }
 
-@misc{NIST:LW:isap,
+@misc{NIST:LWC:isap,
   author        = {C. Dobraunig and M. Eichlseder and S. Mangard and F. Mendel and B. Mennink and R. Primas and T. Unterluggauer},
   title         = {{ISAP}},
   howpublished  = {Submission to NIST (version $2.0$)},
@@ -46,7 +53,7 @@
   note          = {\url{https://csrc.nist.gov/CSRC/media/Projects/lightweight-cryptography/documents/finalist-round/updated-spec-doc/isap-spec-final.pdf}}
 }
 
-@misc{NIST:LW:photon,
+@misc{NIST:LWC:photon,
   author        = {Z. Bao and A. Chakraborti and N. Datta and J. Guo and M. Nandi and T. Peyrin and K. Yasuda},
   title         = {{\tt PHOTON}-{\sf Beetle}},
   howpublished  = {Submission to NIST},
@@ -54,7 +61,7 @@
   note          = {\url{https://csrc.nist.gov/CSRC/media/Projects/lightweight-cryptography/documents/finalist-round/updated-spec-doc/photon-beetle-spec-final.pdf}}
 }
 
-@misc{NIST:LW:romulus,
+@misc{NIST:LWC:romulus,
   author        = {{\sf Romulus}},
   title         = {C. Guo and T. Iwata and M. Khairallah and K. Minematsu and T. Peyrin},
   howpublished  = {Submission to NIST (version $1.3$)},
@@ -62,7 +69,7 @@
   note          = {\url{https://csrc.nist.gov/CSRC/media/Projects/lightweight-cryptography/documents/finalist-round/updated-spec-doc/romulus-spec-final.pdf}}
 }
 
-@misc{NIST:LW:sparkle,
+@misc{NIST:LWC:sparkle,
   author        = {C. Beierle and A. Biryukov and L. Cardoso dos Santos and J. Gro{\ss}sch\"{a}dl and Amir Moradi and L. Perrin and A.R. Shahmirzadi and A. Udovenko and V. Velichkov and Q. Wang},
   title         = {{\sc Schwaemm} and {\sc Esch}: Lightweight Authenticated Encryption and Hashing using the {\sc SPARKLE} Permutation Family},
   howpublished  = {Submission to NIST (version $1.2$)},
@@ -70,7 +77,7 @@
   note          = {\url{https://csrc.nist.gov/CSRC/media/Projects/lightweight-cryptography/documents/finalist-round/updated-spec-doc/sparkle-spec-final.pdf}}
 }
 
-@misc{NIST:LW:jambu,
+@misc{NIST:LWC:jambu,
   author        = {H. Wu and T. Huang},
   title         = {{TinyJAMBU}},
   howpublished  = {Submission to NIST (version $2.0$)},
@@ -78,7 +85,7 @@
   note          = {\url{https://csrc.nist.gov/CSRC/media/Projects/lightweight-cryptography/documents/finalist-round/updated-spec-doc/tinyjambu-spec-final.pdf}}
 }
 
-@misc{NIST:LW:xoodyak,
+@misc{NIST:LWC:xoodyak,
   author        = {J. Daemen and S. Hoffert and S. Mella and M. Peeters and G. van Assche and R. van Keer},
   title         = {{Xoodyak}, a lightweight cryptographic scheme},
   howpublished  = {Submission to NIST (version $2.0$)},
