--- a/doc/slide/slide.tex
+++ b/doc/slide/slide.tex
@@ -14,11 +14,9 @@
 
 \begin{frame}
 \titlepage
+
+\centerline{(disclaimer: some of the above are involved in~\cite{NIST:LWC:sparkle})}
 \end{frame}
-
-% =============================================================================
-
-% disclaimer: involvement with SPARKLE candidate
 
 % =============================================================================
 
@@ -27,7 +25,7 @@
 \begin{block}{Definition}
 NIST define~\cite[Section 3.4]{NIST:LWC:call}
 \[
-\mbox{lightweight cryptography $\simeq$ ``tailored for resource-constrained devices''}
+\mbox{lightweight cryptography ~~$\simeq$~~ ``tailored for resource-constrained devices''}
 \]
 e.g.,
 
