--- a/doc/slide/slide.bib
+++ b/doc/slide/slide.bib
@@ -62,8 +62,8 @@
 }
 
 @misc{NIST:LWC:romulus,
-  author        = {{\sf Romulus}},
-  title         = {C. Guo and T. Iwata and M. Khairallah and K. Minematsu and T. Peyrin},
+  author        = {C. Guo and T. Iwata and M. Khairallah and K. Minematsu and T. Peyrin},
+  title         = {{\sf Romulus}},
   howpublished  = {Submission to NIST (version $1.3$)},
   year          = {2021},
   note          = {\url{https://csrc.nist.gov/CSRC/media/Projects/lightweight-cryptography/documents/finalist-round/updated-spec-doc/romulus-spec-final.pdf}}
